# poohw

./: .gitignore  README.md  pyproject.toml
docs/: ble_services.md  protocol.md  sensors.md
src/poohw/: ble.py  cli.py  commander.py  discovery.py  heart_rate.py  logger.py  protocol.py  replay.py  scanner.py
src/poohw/analytics/: __init__.py  activity.py  features.py  pipeline.py  recovery.py  respiratory.py  sleep.py  spo2.py  strain.py  summary.py
src/poohw/decoders/: __init__.py  accel.py  historical.py  hr.py  packet.py  spo2.py  temperature.py
tests/: conftest.py  test_analytics_activity.py  test_analytics_features.py  test_analytics_recovery.py  test_analytics_respiratory.py  test_analytics_sleep.py  test_analytics_spo2.py  test_analytics_strain.py  test_decoders.py  test_heart_rate.py  test_historical.py  test_packet_decoder.py  test_protocol.py  test_replay.py
